nearly working timing trigger. need to iron out the last few issues

--- a/index.html
+++ b/index.html
@@ -135,7 +135,13 @@
 			}
 
 	/*.zui-component:hover	{
-				outline: 2px solid #999 !important; 
+				outline: 2px solid #999 !important;
+                        // if(_action && typeof _action === 'function'){
+                        //     _action();
+                        // }
+                        // else {
+                        //     console.log('could not fire action. invalid type');
+                        // } 
 			}*/
 		</style>
 	</head>
