--- a/index.html
+++ b/index.html
@@ -134,6 +134,36 @@
 				display: none !important;
 			}
 
+			.bgClear {
+				background-color: transparent !important;
+			}
+
+			#dialogLayer {
+				position: fixed;
+				top:0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				z-index: 9999999;
+				background-color: transparent;
+			}
+
+
+			#dialogLayer .overlay {
+				background-color: rgba(55,55,55,0.85);
+				position: relative;
+				height: 100%;
+				width: 100%;
+			}
+
+			#dialogLayer .dialogContainer {
+				position: relative;
+				height: 100%;
+				width: 100%;
+			}
+
+
+
 	/*.zui-component:hover	{
 				outline: 2px solid #999 !important;
                         // if(_action && typeof _action === 'function'){
