--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script id="data-main" data-main="./js/boot" data-initalPage="../rbss/pages/index" src="js/3rdParty/require.js"></script>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="css/zui.css">
+		<!-- <link rel="stylesheet" type="text/css" href="js/zui/styles/zui.css"> -->
 		<style>
 			/* Override Styles Go Here */
 		</style>
