actor editor in progress
got things moving around and starting coalesce around a better structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<base href="./">
 		
-		<script id="data-main" data-main="./js/boot" data-initalPage="../rbss/pages/index" src="js/3rdParty/require.js"></script>
+		<script id="data-main" data-main="./js/boot" data-initalPage="../rbss/tools/actorEditor/pages/index" src="js/3rdParty/require.js"></script>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="js/zui/styles/zui.css"> -->
